# halali

./: README.md  halali.py  pyproject.toml
halali/: __init__.py  __main__.py  game.py  networking.py  settings.py  ui.py
