[tool.poetry]
name = "halali"
version = "0.1.0"
description = "A single- and multiplayer hunting-themed boardgame"
authors = ["L3viathan <git@l3vi.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arcade = "^2.6.17"
zeroconf = "^0.115.2"
platformdirs = "^3.11.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
